iniciado montaje del menú principal, problema de compatibilidad de imágen grave encontrado, he de redimensionar varios componentes
Signed-off-by: zhensk27 <ceschen27@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#0c1a1e</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#9e6c36</color>
+    <color name="skyBlue">#2178a1</color>
+    <color name="marineBlue">#1c243b</color>
 </resources>
