--- a/app/src/main/res/layout/activity_items_.xml
+++ b/app/src/main/res/layout/activity_items_.xml
@@ -8,7 +8,6 @@
     android:background="@color/colorPrimary"
     tools:context=".Items_Activity">
 
-
     <Button
         android:id="@+id/button"
         android:layout_width="40dp"
@@ -48,7 +47,7 @@
         app:srcCompat="@drawable/rect_ngulo_1" />
 
     <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
+        android:id="@+id/horizontalScrollView1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fadeScrollbars="false"
@@ -61,9 +60,15 @@
         app:layout_constraintTop_toTopOf="@+id/imageView2"
         app:layout_constraintVertical_bias="0.0">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/baseItemScroll"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <Button
                 android:id="@+id/cotademalla_base"
@@ -170,11 +175,11 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/espatula_base"
                 app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </HorizontalScrollView>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/baseEraseItemView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -182,7 +187,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2">
 
         <Button
             android:id="@+id/arcorecurvo_base_erase"
@@ -192,7 +197,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/arcorecurvo_base_erase"
             android:padding="4dp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/capanegatron_base_erase"
@@ -202,7 +207,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/capanegatron_base_erase"
             android:padding="4dp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/cinturondelgigante_base_erase"
@@ -212,7 +217,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/cinturondelgigante_base_erase"
             android:padding="4dp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/cotademalla_base_erase"
@@ -222,7 +227,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/cotademalla_base_erase"
             android:padding="4dp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/espadon_base_erase"
@@ -232,7 +237,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/espadon_base_erase"
             android:padding="4dp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/espatula_base_erase"
@@ -242,7 +247,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/espatula_base_erase"
             android:padding="4dp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/lagrimadeladiosa_base_erase"
@@ -252,7 +257,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/lagrimadeladiosa_base_erase"
             android:padding="4dp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/varainnecesariamentegrande_base_erase"
@@ -262,7 +267,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/varainnecesariamentegrande_base_erase"
             android:padding="4dp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
     </LinearLayout>
 
 
